syntax = "proto3";

option csharp_namespace = "ArticleAPI";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  
  rpc CreateArticle (CreateRequest) returns (CreateResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CreateResponse {
}

message CreateRequest {
  string description = 2;
  string title = 1;
}
